--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <a href="snake/index.html">Snake Game</a>
+        <a href="gomuku/index.html">Gomuku Game</a>
     </body>
 </html>
