--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <a href="snake/index.html">Snake Game</a>
-        <a href="gomuku/index.html">Gomuku Game</a>
+        <nav>
+            <ul>
+                <a href="snake/index.html">Snake Game</a>
+                <a href="gomuku/index.html">Gomuku Game</a>
+            </ul>
+        </nav>
     </body>
 </html>
