--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <nav>
             <ul>
-                <a href="snake/index.html">Snake Game</a>
-                <a href="gomuku/index.html">Gomuku Game</a>
+                <li><a href="snake/index.html">Snake Game</a></li>
+                <li><a href="gomuku/index.html">Gomuku Game</a></li>
             </ul>
         </nav>
     </body>
