--- a/gomuku/index.html
+++ b/gomuku/index.html
@@ -22,7 +22,9 @@
                 <p id="currentState"></p>
                 <p id="message"></p>
             </aside>
-            <footer></footer>
+            <footer>
+                <a href="https://en.wikipedia.org/wiki/Gomoku#Swap2" target="_blank">Rules Here (Swap2)</a>
+            </footer>
         </div>
     </body>
 </html>
